// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/TIME.proto";
import "./StatValue.proto";


package statAggregation.protobuf;

message StatAggregation {
extensions 3 to 103;

  optional ccsds_mal.protobuf.TIME statDate = 1;
  repeated statAggregation.protobuf.StatValue statValue = 2;
}
