// ====================================================================
// HISTORY
// END-HISTORY
// ====================================================================

// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/ATTRIBUTE.proto";
import "../ccsds_mal/LONG.proto";


package statAggregation.protobuf;

message StatValue {
extensions 3 to 103;

  optional ccsds_mal.protobuf.LONG related = 1;
  optional ccsds_mal.protobuf.ATTRIBUTE attrValue = 2;
}
